--- a/index.html
+++ b/index.html
@@ -19,6 +19,6 @@
 </head>
 <body>   
 
-<a class="btn btn-primary" href="/php/student.php" role="button">Link</a>
+<a class="btn btn-primary" href="php/student.php" role="button">Link</a>
 </body>
 </html>
